Trello API implementation
Trello API implementation

--- a/src/component/container/header/main.css
+++ b/src/component/container/header/main.css
@@ -36,3 +36,11 @@
     color: black !important;
     text-decoration: none !important;
   }
+
+  .header-text{
+    display: inline-block;
+    margin-top: 15px;
+    margin-left: 15px;
+    text-decoration: underline;
+    font-size: 20px;
+  }
